[gd_scene load_steps=15 format=3 uid="uid://deihdfjd3w3lr"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_6kltc"]
[ext_resource type="PackedScene" uid="uid://cl275vo7n4qm0" path="res://scenes/spawner/spawner.tscn" id="1_t4rsf"]
[ext_resource type="PackedScene" uid="uid://b5e4f6tovdbvj" path="res://scenes/onigiri/onigiri.tscn" id="2_77y26"]
[ext_resource type="PackedScene" uid="uid://bxpniu7mnmhua" path="res://scenes/aoi/aoi.tscn" id="4_o8g35"]
[ext_resource type="PackedScene" uid="uid://b8vqxkmxtp7na" path="res://scenes/energy_label/energy_label.tscn" id="5_8shni"]
[ext_resource type="PackedScene" uid="uid://xftmbhtspdbt" path="res://scenes/aoi_info/aoi_info.tscn" id="6_xkvc6"]
[ext_resource type="PackedScene" uid="uid://duuths0dstaj6" path="res://scenes/debug_info/debug_info.tscn" id="6_yx5pk"]
[ext_resource type="AudioStream" uid="uid://gnghfuktc6p1" path="res://MusMus-BGM-003.mp3" id="8_sr3dv"]
[ext_resource type="PackedScene" uid="uid://bivca3ntvvxmc" path="res://scenes/comic_viewer/comic_viewer.tscn" id="9_fxc55"]
[ext_resource type="PackedScene" uid="uid://dsf8yyaoinw1g" path="res://scenes/comic_tile/comic_tile.tscn" id="10_51gth"]
[ext_resource type="Resource" uid="uid://ewlqert85q00" path="res://comics/comic_nonalc.tres" id="11_xhxcs"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mqop8"]
b = Vector2(0, 920)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_k64ya"]
b = Vector2(0, 920)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bymk6"]
size = Vector2(1500, 48)

[node name="Main" type="Node"]
script = ExtResource("1_6kltc")
onigiri_scene = ExtResource("2_77y26")
comic_viewer = ExtResource("9_fxc55")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.482353, 0.533333, 0.780392, 1)

[node name="SideWall" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="SideWall"]
position = Vector2(-64, 0)
shape = SubResource("SegmentShape2D_mqop8")

[node name="RightWall" type="CollisionShape2D" parent="SideWall"]
position = Vector2(1264, 0)
shape = SubResource("SegmentShape2D_k64ya")

[node name="Spawner" parent="." instance=ExtResource("1_t4rsf")]
position = Vector2(600, 200)
metadata/_edit_group_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(600, 672)
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-600, -24, -600, 24, 600, 24, 600, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_bymk6")

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(600, 200)

[node name="Aoi" parent="." instance=ExtResource("4_o8g35")]
position = Vector2(608, 416)
metadata/_edit_group_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sr3dv")
autoplay = true

[node name="EnergyLabel" parent="." instance=ExtResource("5_8shni")]
offset_left = 600.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 60.0

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="UI" type="Node" parent="."]

[node name="BottomUI" type="TabContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -256.0
grow_horizontal = 2
grow_vertical = 0
tab_alignment = 2

[node name="漫画を読む" type="MarginContainer" parent="UI/BottomUI"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="UI/BottomUI/漫画を読む"]
layout_mode = 2
size_flags_vertical = 4
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomUI/漫画を読む/ScrollContainer"]
layout_mode = 2

[node name="ComicTile" parent="UI/BottomUI/漫画を読む/ScrollContainer/HBoxContainer" instance=ExtResource("10_51gth")]
layout_mode = 2

[node name="ComicTile2" parent="UI/BottomUI/漫画を読む/ScrollContainer/HBoxContainer" instance=ExtResource("10_51gth")]
layout_mode = 2
comic = ExtResource("11_xhxcs")

[node name="Settings" type="HBoxContainer" parent="UI/BottomUI"]
visible = false
layout_mode = 2

[node name="BoxContainer" type="CenterContainer" parent="UI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -58.0
offset_right = 220.0
offset_bottom = 58.0
grow_vertical = 2

[node name="DebugInfo" parent="UI/BoxContainer" instance=ExtResource("6_yx5pk")]
layout_mode = 2
metadata/_edit_group_ = true

[node name="LeftUI" type="MarginContainer" parent="UI"]
offset_right = 139.0
offset_bottom = 133.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/LeftUI"]
layout_mode = 2

[node name="Button" type="Button" parent="UI/LeftUI/VBoxContainer2"]
layout_mode = 2
text = "Level Up"

[node name="BuyButton" type="Button" parent="UI/LeftUI/VBoxContainer2"]
layout_mode = 2
text = "Buy"

[node name="HSeparator" type="HSeparator" parent="UI/LeftUI/VBoxContainer2"]
layout_mode = 2

[node name="LevelUpSpawnerButton" type="Button" parent="UI/LeftUI/VBoxContainer2"]
layout_mode = 2
text = "Lv Up Spawner"

[node name="RightUI" type="VBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_bottom = 290.0
grow_horizontal = 0
size_flags_vertical = 0

[node name="AoiInfo" parent="UI/RightUI" instance=ExtResource("6_xkvc6")]
layout_mode = 2

[connection signal="spawner_job_fulfilled" from="Spawner" to="." method="_on_spawner_spawner_job_fulfilled"]
[connection signal="on_pressed" from="UI/BottomUI/漫画を読む/ScrollContainer/HBoxContainer/ComicTile" to="." method="_on_comic_tile_on_pressed"]
[connection signal="on_pressed" from="UI/BottomUI/漫画を読む/ScrollContainer/HBoxContainer/ComicTile2" to="." method="_on_comic_tile_on_pressed"]
[connection signal="pressed" from="UI/LeftUI/VBoxContainer2/Button" to="." method="_on_upgrade_jpc_pressed"]
[connection signal="pressed" from="UI/LeftUI/VBoxContainer2/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="UI/LeftUI/VBoxContainer2/LevelUpSpawnerButton" to="." method="_on_level_up_spawner_button_pressed"]
